<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_addticket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ADD PARCEL" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="SAVE" />

    <Button
        android:id="@+id/btn_calculateTotalHours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="CALCULATE TOTAL HOURS" />

    <Spinner
        android:id="@+id/sp_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ListView
        android:id="@+id/lv_mainListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>