<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Title" />

    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="enter title"
        android:inputType="textPersonName"
        android:singleLine="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Description" />

    <EditText
        android:id="@+id/et_description"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:ems="10"
        android:hint="enter description"
        android:inputType="textMultiLine"
        android:singleLine="false" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Start (dd.MM.yyyy HH:mm)" />

    <EditText
        android:id="@+id/et_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="dd.MM.yyyy HH:mm"
        android:inputType="textPersonName"
        android:singleLine="true" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="End (dd.MM.yyyy HH:mm)" />

    <EditText
        android:id="@+id/et_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="dd.MM.yyyy HH:mm"
        android:inputType="textPersonName"
        android:singleLine="true" />
</LinearLayout>